--- a/client/mobile/tailwind.css
+++ b/client/mobile/tailwind.css
@@ -14,6 +14,10 @@
   position: relative
 }
 
+.m-4 {
+  margin: 1rem
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem
@@ -22,6 +26,11 @@
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem
 }
 
 .ml-4 {
@@ -48,12 +57,36 @@
   display: none
 }
 
+.h-full {
+  height: 100%
+}
+
+.w-80 {
+  width: 20rem
+}
+
+.w-full {
+  width: 100%
+}
+
 .flex-1 {
   flex: 1 1 0%
 }
 
 .flex-row {
   flex-direction: row
+}
+
+.flex-row-reverse {
+  flex-direction: row-reverse
+}
+
+.flex-wrap {
+  flex-wrap: wrap
+}
+
+.content-center {
+  align-content: center
 }
 
 .items-center {
@@ -64,17 +97,44 @@
   justify-content: center
 }
 
+.justify-between {
+  justify-content: space-between
+}
+
+.justify-around {
+  justify-content: space-around
+}
+
+.justify-evenly {
+  justify-content: space-evenly
+}
+
 .rounded-full {
   border-radius: 9999px
 }
 
-.border {
-  border-width: 1px
+.rounded-lg {
+  border-radius: 0.5rem
 }
 
-.border-gray-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(17 24 39 / var(--tw-border-opacity))
+.rounded-tr-full {
+  border-top-right-radius: 9999px
+}
+
+.rounded-br-full {
+  border-bottom-right-radius: 9999px
+}
+
+.rounded-tl-full {
+  border-top-left-radius: 9999px
+}
+
+.rounded-bl-full {
+  border-bottom-left-radius: 9999px
+}
+
+.border {
+  border-width: 1px
 }
 
 .bg-sky-400 {
@@ -172,6 +232,11 @@
 
 .capitalize {
   text-transform: capitalize
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 .underline {
