--- a/client/mobile/tailwind.css
+++ b/client/mobile/tailwind.css
@@ -14,10 +14,6 @@
   position: relative
 }
 
-.m-4 {
-  margin: 1rem
-}
-
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem
@@ -81,12 +77,12 @@
   flex-direction: row-reverse
 }
 
-.flex-wrap {
-  flex-wrap: wrap
+.flex-col {
+  flex-direction: column
 }
 
-.content-center {
-  align-content: center
+.flex-wrap {
+  flex-wrap: wrap
 }
 
 .items-center {
@@ -97,16 +93,8 @@
   justify-content: center
 }
 
-.justify-between {
-  justify-content: space-between
-}
-
 .justify-around {
   justify-content: space-around
-}
-
-.justify-evenly {
-  justify-content: space-evenly
 }
 
 .rounded-full {
@@ -241,4 +229,8 @@
 
 .underline {
   text-decoration-line: underline
+}
+
+.\[x\:string\] {
+  x: string
 }
